syntax = "proto3";
package bzd.messages.messages;

service MessagesService {
    rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
}

message CreateMessageRequest {
    optional string text = 101;
    optional string user_id = 102;
    optional string code = 103;
    oneof tp {
        Starting starting = 104;
        Regular regular = 105;
    }

    message Starting {
        repeated string topic_ids = 101;
    }

    message Regular {
        optional string message_id = 101;
    }
}

message CreateMessageResponse {
    optional string message_id = 101;
}
